# bible-study-basis

./: .gitignore  Dockerfile  README.md  build-docker-mcp.sh  build-docker-ui.sh  build-docker.sh  config.yaml  docker-compose.yml  push-docker-2-gcloud.sh  pyproject.toml  requirements.txt  setup_local.sh  start-ui.sh
data-pipeline/: publish-data.py  requirements.txt
data/articles/: index.yaml  新约概览 & 初信造就 -- 启示录.md  新约概览 & 初信造就 -- 弗，腓，西.md  新约概览 & 初信造就 -- 提后，多，门.md  旧约概览 & 初信造就 -- 书，士，得，撒上，撒下.md  旧约概览 & 初信造就 -- 何，珥，摩，俄.md  旧约概览 & 初信造就 -- 箴言，传道书，雅各，先知书概览.md
py/: agent.py  config.py  gui.py  mcp_server.py
py/data/: definitions.py  loaders.py  splitters.py
py/db/: vector_store.py
py/sub_agents/: generalist.py  reviewer.py
scripts/: build-data.py  build-dataset.py
src/bible_study_basis/: agent.py  config.py  data_tools.py  llm.py
src/bible_study_basis/data/: utils.py
src/bible_study_basis/db/: vector_store.py
src/bible_study_basis/skills/answer-biblically/: SKILL.md
