[project]
name = "bible-study-basis"
version = "0.1.0"
description = "An AI-powered assistant designed to facilitate various Bible study tasks."
readme = "README.md"
requires-python = ">=3.9" # Assuming Python 3.9 or newer for modern features
license = { text = "MIT" } # Placeholder, choose an appropriate license
keywords = ["bible", "ai", "study", "llm"]
authors = [
  { name = "Wei-Fan Chiang", email = "weifan.wf@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml",
    "langchain-openai",
    "langchain-core",
    "qdrant-client",
    "streamlit",
    "python-dotenv",
    "pydantic>=2.0", # Assuming Pydantic v2 for modern projects
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # This tells setuptools to look for packages in the 'src' directory